# cliTeXlib

./: README.md  pyproject.toml
src/main/: new.py  open.py  remove.py  search.py  tlib.py
